# make-git-branch-name

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/args/commands/: mod.rs  norm.rs
cli/src/cli_config/: config.rs  mod.rs
cli/src/cli_config/commands/: make.rs
cli/src/config/: mod.rs
cli/src/config/commands/: find.rs  mod.rs  norm.rs
cli/src/exec/: mod.rs
cli/src/exec/commands/: find.rs  make.rs  norm.rs
crates/cli-config/: Cargo.toml
crates/cli-config/src/: lib.rs
crates/cli-config/src/args/: mod.rs
crates/cli-config/src/args/commands/: find.rs  make.rs  mod.rs
crates/config-cli/: Cargo.toml
crates/config-cli/src/: lib.rs
crates/config-cli/src/args/: mod.rs
crates/config-cli/src/args/commands/: norm.rs
crates/config-core/: Cargo.toml
crates/config-file/: Cargo.toml
crates/core/: main.rs
crates/core/exec/: mod.rs
crates/core/exec/commands/: find.rs  make.rs  mod.rs  norm.rs
crates/file-config/: Cargo.toml
crates/name-normalizer/: Cargo.toml
crates/name-normalizer/src/: issue_heading.rs  issue_type.rs  lib.rs  normalize.rs  release_version.rs
normalizer/: Cargo.toml
normalizer/src/: issue_heading.rs  issue_type.rs  lib.rs  release_version.rs
