[package]
name = "make-git-branch"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "mkgb"
path = "crates/core/main.rs"

[dependencies]
# workspace dependencies
name-normalizer = { path = "crates/name-normalizer" }
config-core = { path = "crates/config-core" }
config-cli = { path = "crates/config-cli" }
config-file = { path = "crates/config-file" }

[workspace]
resolver = "2"

members = [ "crates/config-core", "crates/config-cli",  "crates/config-file", "crates/name-normalizer"]
